2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 445/bsps
	* bsp_specs: Hand edited to duplicate change Ralf applied to the CVS
	trunk.

2003-08-21      Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-07-18	Till Straumann <strauman@slac.stanford.edu>

	PR 288/rtems
	* irq/irq_asm.S, startup/bspstart.c: _ISR_Nest_level is now properly
	maintained.

2003-03-25	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	PR 368/filesystem
	* ide/*: added BSP support for libchip standard ide driver

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-20	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds*: Add FreeBSD sysctl() sections.

2002-12-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* console/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* irq/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	Remove SORDID_HACK. Eliminate *_O_FILES.
	* network/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* startup/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* vectors/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-11-04	Joel Sherrill <joel@OARcorp.com>

	* console/console.c, network/network.c: Removed warnings.

2002-11-04	Joel Sherrill <joel@OARcorp.com>

	* console/console.c, network/network.c: Removed warnings.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* clock/p_clock.c, console/console.c, startup/bspstart.c: Removed
	warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.