@@ -1,3 +1,11 @@
+2003-09-04	Joel Sherrill <joel@OARcorp.com>
+
+	* clock/p_clock.c, ide/pcmcia_ide.c, include/bsp.h, include/coverhd.h,
+	irq/irq.c, irq/irq.h, irq/irq_asm.S, irq/irq_init.c,
+	startup/bspstart.c, startup/bspstart.c.nocache, startup/imbx8xx.c,
+	startup/mmutlbtab.c, startup/setvec.c, startup/start.S,
+	vectors/vectors.h, vectors/vectors_init.c: URL for license changed.
+
 2003-08-22	Joel Sherrill <joel@OARcorp.com>
 
 	PR 445/bsps
